--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smoosh"
   , "preferGlobal": "true"
   , "description": "a tool for packaging your JavaScript and CSS projects"
-  , "version": "0.3.1.bt"
+  , "version": "0.3.1-bt"
   , "authors": ["Jacob Thornton <@fat>", "Dustin Diaz <@ded>"]
   , "keywords": ["packager", "packaging", "smoosher", "javascript", "css", "dependencies"]
   , "directories": { "lib": "./lib/smoosh" }
